--- a/src/index.pug
+++ b/src/index.pug
@@ -132,8 +132,30 @@ body
       //-         a.flex-sm-fill.text-sm-center.nav-link(href='#timeline') 路線圖
       //-         //- a.flex-sm-fill.text-sm-center.nav-link(href='#sale') 銷售
       //-         a.flex-sm-fill.text-sm-center.nav-link(href='#team') 合作夥伴
-      .d-flex
-        .block-copyright
-          div AUG 2018 | Copyright ® 2018 VMFIVE. All rights reserved.
+      .row
+        .col-lg-1.col-12
+        .col-lg-8.col-12
+          .row
+            div.block-list.row.col-lg-3.col-12
+              a.col-lg-12.col 精準觸及
+              a.col-lg-12.col 案例櫥窗
+              a.col-lg-12.col 新聞中心
+              a.col-lg-12.col 媒體曝光
+            div.block-list.row.col-lg-3.col-12
+              a.col-lg-12.col 關於 ADisON
+              a.col-lg-12.col Blog
+              a.col-lg-12.col 人才招募
+              a.col-lg-12.col 聯絡我們
+            div.block-list.row.col-lg-6.col-12
+              .col-6 <img src="/img/phone.png")> +886 2 2577 5829
+              .col-6 <img src="/img/fax.png")> +886 2 2577 5830
+              .col-12 <img src="/img/location.png")> 台北巿松山區敦化南路一段 5 號 9F
+              .col-12 <img src="/img/mail.png")> ADisON@vm5.com
+        .col-lg-3.col-12
+          img.title-img.img-fluid.rounded.mx-auto(src="/img/Contact Us.png")
+      .row
+        .col-12
+          hr
+          .block-copyright AUG 2018 | Copyright ® 2018 VMFIVE. All rights reserved.
 
   
