Fix some margin problems

--- a/src/index.pug
+++ b/src/index.pug
@@ -8,7 +8,7 @@ body
       
       .container
         .row
-          .col-md.website-main-block-header
+          .col.website-main-block-header
             //- nav.navbar.navbar-expand-lg.navbar-light.bg-light
             nav.navbar.navbar-expand-lg.navbar-dark
               button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
@@ -32,7 +32,7 @@ body
               
           
       .row.website-main-block-video-pmp
-        .col-md-6.col-sm
+        .col-lg-6.col-12
           img.title-img.img-fluid.rounded.mx-auto(src="/img/Video PMP.png")
           p.intro-text
             | ADisON 影音 PMP <br>
@@ -42,7 +42,7 @@ body
             | 並透過優質的流量幫助您有效的傳達品牌故事 <br>
           
           img.slogan(src="/img/slogan-1.png")
-        .col-md-6.col-sm-12
+        .col-lg-6.col-12
           img.img-fluid.rounded.mx-auto(src="/img/KV.png")
           img.A.img-fluid.rounded.mx-auto(src="/img/A (1).png")
           
@@ -57,7 +57,7 @@ body
             #carouselNews.carousel.slide(data-ride='carousel')
               .carousel-inner
                 .carousel-item.active
-                  img.img-portrait(src="/img/群組 4.png")
+                  img.img-fluid.img-portrait(src="/img/群組 4.png")
                 //- |               
                 //- .carousel-item
                 //-   img.d-block.w-100(src='', alt='Second slide')
@@ -75,9 +75,10 @@ body
                 |               
                 span.sr-only Next
         .row.block-title
-          .col-12
+          .col-lg-6.col-12
+          .col-lg-6.col-12
             .intro-block
-              img.title-img.img-fluid.rounded.mx-auto(src="/img/News.png")
+              img.img-fluid.title-img.rounded.mx-auto(src="/img/News.png")
 
     .website-main-block-history
       .row
