Adjust title-img

--- a/src/index.pug
+++ b/src/index.pug
@@ -33,7 +33,7 @@ body
           
       .row.website-main-block-video-pmp
         .col-lg-6.col-12
-          img.title-img.img-fluid.rounded.mx-auto(src="/img/Video PMP.png")
+          img.img-fluid.title-img.rounded.mx-auto(src="/img/Video PMP.png")
           p.intro-text
             | ADisON 影音 PMP <br>
             | 以創新吸睛的廣告格式抓住受眾目光 <br>
@@ -90,7 +90,7 @@ body
       .row
         .col-12
           .intro-block
-            img.title-img.img-fluid.rounded.mx-auto(src="/img/History.png")
+            img.img-fluid.title-img.rounded.mx-auto(src="/img/History.png")
             p.intro-text
               | 不斷創新的廣告格式讓您的廣告預算發揮最大價值 <br>
               | 抓住消費者的目光 <br>
@@ -100,7 +100,7 @@ body
       .row
         .col-lg-6.col-12
           .intro-block
-            img.title-img.img-fluid.rounded.mx-auto(src="/img/Products.png")
+            img.img-fluid.title-img.rounded.mx-auto(src="/img/Products.png")
             p.intro-text
               | 不斷創新的廣告格式讓您的廣告預算發揮最大價值 <br>
               | 抓住消費者的目光 <br>
@@ -163,7 +163,7 @@ body
               .col-12 <img src="/img/location.png")> 台北巿松山區敦化南路一段 5 號 9F
               .col-12 <img src="/img/mail.png")> ADisON@vm5.com
         .col-lg-3.col-12
-          img.title-img.img-fluid.rounded.mx-auto(src="/img/Contact Us.png")
+          img.img-fluid.title-img.rounded.mx-auto(src="/img/Contact Us.png")
       .row
         .col-12
           hr
