--- a/src/index.pug
+++ b/src/index.pug
@@ -3,6 +3,7 @@ head
   meta(charset="utf-8")
   title ADisON
 body
+  a(name="home")
   .website-main-container
     .website-main-container-header
       
@@ -51,7 +52,7 @@ body
     
     .row.website-main-block-news
       img.img-fluid.title-img.rounded.mx-auto(src="/img/News.png")
-      a(name="about")
+      a(name="news")
       .container.d-flex.flex-column
         .row.block-title
           .col-12
@@ -83,6 +84,7 @@ body
     .website-main-block-history
       img.slogan(src="/img/slogan-1.png")
       .row
+        a(name="history")
         .col-1
         .col-10
           img.desktop.img-fluid.rounded.mx-auto(src="/img/群組 1-2.png")
@@ -98,6 +100,7 @@ body
               | 成功讓投放效果最佳化 <br>
           
     .website-main-block-products
+      a(name="products")
       .row
         .col-lg-6.col-12
           .intro-block
@@ -130,6 +133,7 @@ body
               span.sr-only Next
 
     .website-main-block-footer
+      a(name="contactus")
       //- .container
       //-   .row.d-flex
       //-     .col-md.col-sm-12.block-logo
