--- a/assets/css/smoothproducts.css
+++ b/assets/css/smoothproducts.css
@@ -221,6 +221,14 @@ html, body {
   min-height: 100%;
 }
 
+.block-adison {
+  /*  */
+}
+
+.block-features .row > div {
+  padding: 0;
+}
+
 .block-header.title {
   text-align: start;
 }
@@ -230,7 +238,7 @@ html, body {
   padding-top: 1 * 100%;
 
   /* height: 0; */
-  min-width: 300px;
+  min-width: 350px;
   overflow: hidden;
 }
 
@@ -242,12 +250,26 @@ html, body {
   width: 100%;
   height: 100%;
 
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
+
   min-height: 100px;
   width: 100%;
   border-style: solid;
   border-width: 2px;
   border-color: white;
-  padding: 5%;
+
+}
+
+.block-header .block-square > .inner p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: auto;
+  height: auto;
+  transform: translate(-50%,-50%);
 }
 
 .block-header.title {
@@ -257,7 +279,25 @@ html, body {
 }
 
 .block-header.title > img {
-  height: 300px;
+  height: 350px;
+}
+
+.block-heading.right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+
+  text-align: right;
+}
+
+.page-footer > .row {
+  padding: 0 80px 0 80px;
+}
+
+.underline {
+  width: 80px;
+  height: auto;
 }
 
 section {
