--- a/assets/css/smoothproducts.css
+++ b/assets/css/smoothproducts.css
@@ -224,6 +224,9 @@ html, body {
 .block-adison {
   /*  */
 }
+.block-adison .row > div {
+  padding: 0;
+}
 
 .block-features .row > div {
   padding: 0;
@@ -238,8 +241,12 @@ html, body {
   padding-top: 1 * 100%;
 
   /* height: 0; */
-  min-width: 350px;
+  min-width: 250px;
   overflow: hidden;
+}
+
+.block-header.title > img {
+  height: 250px;
 }
 
 .block-header .block-square > .inner {
@@ -278,17 +285,71 @@ html, body {
   justify-content: center;
 }
 
-.block-header.title > img {
-  height: 350px;
+@media screen and (min-width: 720px) {
+  .block-header .block-square {
+    min-width: 350px;
+  }
+
+  .block-header.title > img {
+    height: 350px;
+  }
 }
 
-.block-heading.right {
+.block-heading.right, .block-heading.left {
   display: flex;
   flex-direction: column;
+}
+.block-heading.right {
   align-items: flex-end;
   justify-content: flex-end;
 
   text-align: right;
+}
+.block-heading.left {
+  align-items: flex-start;
+  justify-content: flex-start;
+
+  text-align: left;
+}
+
+.block-circle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.circle-progress {
+  transform: rotateZ(-90deg);
+}
+.circle-val {
+  position: absolute;
+  align-self: center;
+
+  color: #727272;
+  font-family: "DINPro-CondBold", Sans-serif;
+  font-size: 50px;
+}
+
+@media screen and (min-width: 720px) {
+  .mobile {
+    display: none;
+  }
+}
+@media screen and (max-width: 720px) {
+  .desktop {
+    display: none;
+  }
+}
+
+.feature-box > button {
+  z-index: 99;
+  cursor: pointer;
+}
+
+.container .top-right {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .page-footer > .row {
@@ -298,6 +359,78 @@ html, body {
 .underline {
   width: 80px;
   height: auto;
+}
+.sideline {
+  width: 7px;
+  height: auto;
+}
+
+@media (min-width: 768px) {
+
+    /* show 3 items */
+    .carousel-inner .active,
+    .carousel-inner .active + .carousel-item,
+    .carousel-inner .active + .carousel-item + .carousel-item,
+    .carousel-inner .active + .carousel-item + .carousel-item + .carousel-item  {
+        display: block;
+    }
+
+    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
+    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item,
+    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item,
+    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item + .carousel-item {
+        transition: none;
+    }
+
+    .carousel-inner .carousel-item-next,
+    .carousel-inner .carousel-item-prev {
+      position: relative;
+      transform: translate3d(0, 0, 0);
+    }
+
+    .carousel-inner .active.carousel-item + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+        position: absolute;
+        top: 0;
+        right: -25%;
+        z-index: -1;
+        display: block;
+        visibility: visible;
+    }
+
+    /* left or forward direction */
+    .active.carousel-item-left + .carousel-item-next.carousel-item-left,
+    .carousel-item-next.carousel-item-left + .carousel-item,
+    .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item,
+    .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item,
+    .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+        position: relative;
+        transform: translate3d(-100%, 0, 0);
+        visibility: visible;
+    }
+
+    /* farthest right hidden item must be abso position for animations */
+    .carousel-inner .carousel-item-prev.carousel-item-right {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        display: block;
+        visibility: visible;
+    }
+
+    /* right or prev direction */
+    .active.carousel-item-right + .carousel-item-prev.carousel-item-right,
+    .carousel-item-prev.carousel-item-right + .carousel-item,
+    .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item,
+    .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item,
+    .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+        position: relative;
+        transform: translate3d(100%, 0, 0);
+        visibility: visible;
+        display: block;
+        visibility: visible;
+    }
+
 }
 
 section {
