--- a/assets/css/elementor.css
+++ b/assets/css/elementor.css
@@ -7,10 +7,11 @@
 }
 
 .elementor-divider-separator {
-    border-top-style: solid;
+    /* border-top-style: solid;
     border-top-width: 1px;
     border-top-color: #ffffff;
-    width: 90%;
+    width: 90%; */
+		text-decoration: underline;
 }
 
 .ee-grid-align--stretch .ee-gallery .ee-media__thumbnail img,
