--- a/assets/css/smoothproducts.css
+++ b/assets/css/smoothproducts.css
@@ -300,10 +300,18 @@ html, body {
   text-align: center;
 }
 .block-header .block-square > .inner h1 {
-  font-size: 60px;
+  font-size: 38px;
 }
 .block-header .block-square > .inner h2 {
-  font-size: 35px;
+  font-size: 20px;
+}
+@media screen and (min-width: 720px) {
+  .block-header .block-square > .inner h1 {
+    font-size: 60px;
+  }
+  .block-header .block-square > .inner h2 {
+    font-size: 32px;
+  }
 }
 
 .block-header.title {
