--- a/assets/css/smoothproducts.css
+++ b/assets/css/smoothproducts.css
@@ -238,6 +238,10 @@ html, body {
   }
 }
 
+.block-adison .row, .block-flow .row, .block-features .row, .block-awards .row, .page-footer .row {
+  width: 100%;
+  margin: 0;
+}
 .block-features .row > div {
   padding: 0;
 }
@@ -408,9 +412,9 @@ html, body {
   right: 0;
 }
 
-.page-footer > .row {
+/* .page-footer > .row {
   padding: 0 80px 0 80px;
-}
+} */
 
 .underline {
   width: 80px;
@@ -459,7 +463,10 @@ html, body {
 }
 .block-awards .top-right {
   top: 100px;
-  right: -15px;
+  right: 0;
+}
+.no-padding {
+  padding: 0;
 }
 
 .p-relative {
